# nntrainer

./: meson.build  meson_options.txt
api/ccapi/include/: tensor_dim.h
nntrainer/graph/: network_graph.cpp
nntrainer/layers/: fc_layer.cpp  fc_layer.h  layer_impl.h  layer_node.cpp
nntrainer/models/: neuralnet.cpp
nntrainer/tensor/: blas_interface.cpp  blas_interface.h  blas_neon.cpp  meson.build  tensor.cpp  tensor.h  tensor_dim.cpp  tensor_pool.cpp
nntrainer/tensor/opencl/: cl.h  cl_add_impl.cpp  cl_add_impl.hpp  cl_dot_product_impl.cpp  cl_dot_product_impl.hpp  cl_op_impl.hpp  cl_sgemv_impl.cpp  cl_sgemv_impl.hpp  opencl_buffer.cpp  opencl_buffer.hpp  opencl_command_queue_manager.cpp  opencl_command_queue_manager.hpp  opencl_context_manager.cpp  opencl_context_manager.hpp  opencl_kernel.cpp  opencl_kernel.hpp  opencl_loader.cpp  opencl_loader.hpp  opencl_program.cpp  opencl_program.hpp
test/include/: nntrainer_test_util.h
test/jni/: Android.mk
test/unittest/: meson.build  unittest_neon_util.cpp  unittest_neon_util.h  unittest_nntrainer_tensor.cpp  unittest_nntrainer_tensor_fp16.cpp  unittest_nntrainer_tensor_neon_fp16.cpp  unittest_nntrainer_tensor_nhwc.cpp
test/unittest/compiler/: meson.build
test/unittest/layers/: layers_golden_tests.cpp  unittest_layers_fully_connected.cpp
